k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: college-event-mgmt
  namespace: college-events
spec:
  selector: { app: college-event-mgmt }
  ports:
    - port: 80
      targetPort: 8080
