k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: college-event-mgmt
  namespace: college-events
spec:
  ingressClassName: nginx
  rules:
    - host: events.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: college-event-mgmt
                port: { number: 80 }
